(fix) albertliana: time still not showing due to different font render

--- a/albertliana/src/css/main.css
+++ b/albertliana/src/css/main.css
@@ -105,7 +105,7 @@ h2 {
 @media (max-width: 320px) {
 
   .venue .accordion-content {
-    height: 570px;
+    height: 610px;
   }
 
 }
